judgeData/submissionData/1601817036422/compileError.txt
Main.cpp:30:13: error: expected ';' after return statement
    return 0
            ^
            ;
1 error generated.
